# temperature_monitor_v2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: eeprom.hpp  led.hpp  temperature_monitor.hpp  temperature_sensor.hpp
src/: eeprom.cpp  led.cpp  main.cpp  temperature_monitor.cpp  temperature_sensor.cpp
